fix bug added transform rotate y to back of tile so the back was behind the front before the flip

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,10 @@ button {
     transform: rotateY(180deg);
 } 
 
+.flip-card-back {
+    transform:rotateY(180deg);
+}
+
 /* Media Queries */
 
 @media (max-width: 559px) {
